Fixed font-sizes to rems; fized fonts of headings; fixed h1 heading to wrap on different lines; fixed uppercase styluign for headers; fixed style of copyright section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -58,7 +58,7 @@ rgb(8,8,11)
   font-family: 'Iceberg', cursive;
 */
 
-/* HEADINGS - PERFORMIN, NEW EXPERINCE, GET YOUR - done
+/* HEADINGS - PERFORMING, NEW EXPERINCE, GET YOUR, THE GRAM, STAY UPDATED - done
   Iceberg, Regular, 52px
   font-family: 'Iceberg', cursive;
 */
@@ -100,7 +100,7 @@ html {
 body {
     color: #fff;
     font-family: 'Montserrat', sans-serif;
-    font-size: 20px;
+    font-size: 2rem;
     line-height: 29px;
 }
 
@@ -131,7 +131,8 @@ a {
 /* section headings  */
  h2 {
   font-family: 'Iceberg', cursive;
-  font-size: 52px;
+  font-size: 5.2rem;
+  text-transform: uppercase;
  }
 
 
@@ -140,11 +141,12 @@ a {
 /* buttons */
 button, .submit-button {
   font-family: 'Iceberg', cursive;
-  font-size: 25px;
+  font-size: 2.5rem;
   line-height: 29px;
   text-align: center;
   background-color: rgb(146, 0, 255);
   color: #fff;
+  border: none;
   padding: 15px;
 }
 
@@ -170,15 +172,17 @@ header {
 
 h1 {
   font-family: 'Iceberg', cursive;
-  font-size: 80px;
+  font-size: 8rem;
   text-align: center;;
   line-height: 80px;
+  text-transform: uppercase;
 }
 
 header h2 {
   font-family: 'Montserrat', sans-serif;
-  font-size: 35px;
+  font-size: 3.5rem;
   text-align: center;
+  text-transform: none;
   background-color: rgb(146, 0, 255);
   padding: 20px 0;
   /*  TO DO - fix the width */
@@ -188,6 +192,7 @@ header h2 {
 /* navigation */
 nav {
     text-align: center;
+    text-transform: uppercase;
 }
 
  nav li {
@@ -298,8 +303,9 @@ nav {
 
   .info-link {
   font-family: 'Montserrat', sans-serif;
-  font-size: 30px;
+  font-size: 3rem;
   font-weight: 700;
+  text-transform: uppercase;
   text-align: center;
   /* for accesability */
   padding: 10px;
@@ -362,6 +368,7 @@ footer {
   /* i don't think this does anything */
   position: relative;
   text-align: center;
+  font-weight: bold;
   /* this also doesn't do anything */
   bottom: 0;
 
